--- a/index.html
+++ b/index.html
@@ -28,27 +28,24 @@
             <div id="bar">
 
             </div>
-
+            <span id="type">Session</span>
         </div>
         
         <div class="row">
-            <div class="col s12 m6">
+            <div class="col s12 m3">
                 <p>Break length</p>
-                <p><i class="fa fa-minus controls break-minus"></i> <span id="break">5</span> <i class="fa fa-plus controls break-plus"></i></p>
+                <p style="margin-top: 0;"><i class="fa fa-minus controls break-minus"></i> <span id="break">5</span> <i class="fa fa-plus controls break-plus"></i></p>
             </div>
-            <div class="col s12 m6">
+            <div class="timer col s12 m6">
+                <h1><span id="minutes">25</span>:<span id="seconds">00</span></h1>
+            </div>
+            <div class="col s12 m3">
                 <p>Session length</p>
-                <p><i class="fa fa-minus controls session-minus"></i> <span id="session">1</span> <i class="fa fa-plus controls session-plus"></i></p>
+                <p style="margin-top: 0;"><i class="fa fa-minus controls session-minus"></i> <span id="session">25</span> <i class="fa fa-plus controls session-plus"></i></p>
             </div>
         </div>
 
-        <div>
-            <span id="type">Session</span>
-        </div>
-
-        <div class="timer">
-            <h1><span id="minutes">01</span>:<span id="seconds">00</span></h1>
-        </div>
+        
         <div class="row">
             <div class="col s12 m6" style="text-align: right;">
                 <button class="waves-effect waves-light btn grey darken-2" id="play"><i class="fa fa-play"></i></button>
@@ -59,6 +56,10 @@
         </div>
 
     </main>
+
+    <footer>
+        Made with &#9889; by <a href="https://github.com/boristane" target="_blank">Boris Tane</a>
+    </footer>
 
 </body>
 </html>
